# ShopGoodwill

./: LICENSE.txt  README.md  example.py  pyproject.toml  requirements.txt  setup.py
source/: ShopGoodwill.py  ShopGoodwillItem.py
src/ShopGoodwill/: ShopGoodwill.py  ShopGoodwillItem.py  ShopGoodwillPost.py  __init__.py  fallback_ua.txt  search_request.json
